models, DTOs, services, controllers, migration, fixes

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PersonDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=product_store;Persist Security Info=True;User ID=sa;Password=sa"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=product_store;Persist Security Info=True;User ID=sa;Password=sa"
   }
 }
